Social icons alignment fixed, hover transformation pending

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,14 +31,15 @@ h1, h2, h3, h4, h5, h6 {
 .brand-image{
   border: 1px solid #00f;
   width:100%;
-  height: 175px;
+  height: 9em;
+
 }
 
 .main-nav
 {
     border:1px solid #000;
     width:25%;
-    height:auto;
+    height:100%;
 }
 
 .nav-list{
@@ -69,18 +70,32 @@ h1, h2, h3, h4, h5, h6 {
 .trademark{
   border: 1px solid #000;
   width: 100%;
-  height: 355px;
+  width: 100%;
+  height: 22em;
 }
 .social{
-  justify-content: flex-end;
+  /*justify-content: flex-end;*/
   border: 1px solid #F90;
   width: 100%;
-  height: 50px;
+  height: 2.75em;
+  padding: 3%; 
+}
+ 
+.social .fa-facebook{
+  margin-left: 50%;
 }
 
+.social i{
+  padding: 0 10px 0 10px;
+}
 
 .fa{
   color: red;
+}
+
+.trademark{
+  border: 1px solid #000;
+  width: 100%; height: 1.75em;
 }
 
 .main-content
